--- a/AndroidStudioProject/app/build.gradle
+++ b/AndroidStudioProject/app/build.gradle
@@ -26,7 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
+
 
 dependencies {
 
@@ -36,4 +38,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'jp.wasabeef:richeditor-android:2.0.0'
+
 }
