--- a/AndroidStudioProject/app/build.gradle
+++ b/AndroidStudioProject/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'jp.wasabeef:richeditor-android:2.0.0'
+    implementation 'io.github.sidvenu.mathjaxview:mathjaxview:1.0.7'
 
 }
